--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 
 <div class="main-card">
     <h1>DePass</h1>
-    <div class="subtitle">Secure Vault Access</div>
+    <div class="subtitle">Password Generator</div>
 
     <div id="output" class="output-container"></div>
 
@@ -303,4 +303,5 @@
     generate(false);
 </script>
 </body>
+
 </html>
